# cryptopals

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  llvm-gcov.sh
.github/workflows/: test.yml
python/: hmac_padding_oracle.py  padding_oracle.py  srp_server.py
src/: aes.c  aes.h  analysis.c  analysis.h  bignum.c  bignum.h  block_cipher.h  break_aes.c  break_aes.h  break_cbc.c  break_cbc.h  break_ctr.c  break_ctr.h  break_dh.c  break_dh.h  break_ecb.c  break_ecb.h  break_mac.c  break_mac.h  break_mt19937.c  break_mt19937.h  break_plaintext.c  break_plaintext.h  break_repeating_key_xor.c  break_repeating_key_xor.h  break_rsa.c  break_rsa.h  break_single_byte_xor.c  break_single_byte_xor.h  break_srp.c  break_srp.h  break_ssrp.c  break_ssrp.h  bytes.c  bytes.h  cbc.c  cbc.h  compat.h  cookie.c  cookie.h  (+31 more)
src/compat/: asprintf.c  asprintf.h  explicit_bzero.c  explicit_bzero.h  explicit_memset.c  explicit_memset.h  freezero.c  freezero.h  reallocarray.h  recallocarray.c  recallocarray.h  strlcat.h  strlcpy.h  timingsafe_bcmp.c  timingsafe_bcmp.h
tests/: helpers.c  helpers.h  main.c  test_aes.c  test_aes.h  test_analysis.c  test_analysis.h  test_bignum.c  test_break_aes.c  test_break_aes.h  test_break_cbc.c  test_break_cbc.h  test_break_ctr.c  test_break_ctr.h  test_break_dh.c  test_break_ecb.c  test_break_ecb.h  test_break_mac.c  test_break_mt19937.c  test_break_plaintext.c  test_break_plaintext.h  test_break_repeating_key_xor.c  test_break_repeating_key_xor.h  test_break_rsa.c  test_break_single_byte_xor.c  test_break_single_byte_xor.h  test_break_srp.c  test_break_ssrp.c  test_break_ssrp.h  test_bytes.c  test_cbc.c  test_cbc.h  test_cookie.c  test_ctr.c  test_ctr.h  test_dh.c  test_dh.h  test_ecb.c  test_ecb.h  test_mac.c  (+13 more)
